--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 html {
     scroll-behavior: smooth;
     margin: none;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+  .html::-webkit-scrollbar {
+    width: 0;
+    height: 0;
   }
   .important {
     text-align: center;
@@ -126,4 +133,3 @@ html {
   img {
     image-rendering: crisp-edges;
   }
-  
