--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ html {
     font-family: Spectral;
     font-style: italic;
   }
+  h3 {
+    font-family: Futura;
+    font-weight: lighter;
+  }
   p {
     text-align: center;
     font-size: 20px;
