--- a/style.css
+++ b/style.css
@@ -131,11 +131,11 @@ html {
   img {
     image-rendering: crisp-edges;
   }
-  .paragraph {
+  .famspeech {
     font-size: 18px;
-    background-color: transparent;
     text-align: left;
     color: white;
     font-family: Futura;
+    padding: 5px;
   }
   
