Added photo to img directory and to family section

--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ html {
   }
   img {
     image-rendering: crisp-edges;
+    display: block;
   }
   .famspeech {
     font-size: 18px;
@@ -137,5 +138,5 @@ html {
     color: white;
     font-family: Futura;
     padding: 5px;
+    line-height: 2cm;
   }
-  
