Added caption to family photo and changed size

--- a/style.css
+++ b/style.css
@@ -136,6 +136,5 @@ html {
     text-align: left;
     color: white;
     font-family: Futura;
-    padding: 5px;
-    line-height: 2cm;
+    padding-right: 30px;
   }
