--- a/style.css
+++ b/style.css
@@ -133,8 +133,9 @@ html {
   }
   .famspeech {
     font-size: 18px;
+    line-height: 5px;
     text-align: left;
     color: white;
     font-family: Futura;
-    padding-right: 30px;
+    margin-right: 50px;
   }
