Fixed string typo and lessened photo opacity

--- a/style.css
+++ b/style.css
@@ -137,5 +137,5 @@ html {
     text-align: left;
     color: white;
     font-family: Futura;
-    margin-right: 50px;
+    padding-right: 20px;
   }
