Increased font size for div famspeech, applied transparent bg and padding

--- a/style.css
+++ b/style.css
@@ -131,12 +131,11 @@ html {
     image-rendering: crisp-edges;
   }
   .famspeech {
-    font-size: 18px;
-    line-height: 2cm;
+    background: transparent;
     text-align: left;
     color: white;
     font-family: Futura;
-    margin-right: 10px;
+    padding: 10px;
     display: block;
   }
   .dreams {
