--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ html {
     image-rendering: crisp-edges;
   }
   .famspeech {
+    font-size: 22px;
     background: transparent;
     text-align: left;
     color: white;
@@ -139,8 +140,8 @@ html {
     display: block;
   }
   .dreams {
-    background-image: url("images/sky.jpg");
-    height: 400px;
+    background-image: url("images/tech.png");
+    height: 500px;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
