Changed hopes & dreams icon

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ html {
     display: block;
   }
   .dreams {
-    background-image: url("images/tech.png");
+    background-image: url("images/sky.jpg");
     height: 500px;
     background-attachment: fixed;
     background-position: center;
