--- a/style.css
+++ b/style.css
@@ -133,10 +133,10 @@ html {
   .famspeech {
     font-size: 22px;
     background: transparent;
-    text-align: left;
+    text-align: justify;
     color: white;
     font-family: Futura;
-    padding: 10px;
+    padding: 20px;
     display: block;
   }
   .dreams {
