--- a/style.css
+++ b/style.css
@@ -1,150 +1,150 @@
 html {
-    scroll-behavior: smooth;
-    margin: none;
-  }
-  .important {
-    text-align: center;
-  }
-  h1 {
-    padding: 10px;
-    font-family: Rockwell;
-    font-weight: lighter;
-    font-size: 100px;
-    display: block;
-    margin-bottom: 75px;
-  }
-  .right {
-    text-align: right;
-  }
-  
-  h2 {
-    margin-top: 50px;
-    font-family: Spectral;
-    font-style: italic;
-  }
-  h3 {
-    font-family: Futura;
-    font-weight: lighter;
-    font-size: 45px;
-  }
-  p {
-    text-align: center;
-    font-size: 20px;
-    font-family: Futura;
-    background:
-      rgb(247, 201, 201);
-    mix-blend-mode: lighten;
-    padding: 20px;
-  }
-  body {
-    background: linear-gradient(
-      to bottom right,
-      rgb(247, 201, 201),
-      rgb(174, 198, 207)
-    );
-    background-repeat: no-repeat;
-    color: white;
-    margin: 0px;
-  }
-  .photo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .profile {
-    background-image: url("images/lolitsme.jpg");
-    height: 500px;
-    background-color: indigo;
-    background-blend-mode: lighten;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-bottom: 100px;
-  }
-  table {
-    display: block;
-    margin-top: 2%;
-    margin-left: 10%;
-    margin-right: 15%;
-    font-family: Futura;
-    font-size: 20px;
-    color: white;
-    background-color: rgb(247, 201, 201);
-    mix-blend-mode: lighten;
-    padding: 15px;
-    position: absolute;
-  }
-  th {
-    font-size: 36px;
-  }
-  ul {
-    list-style-type: square;
-  }
-  .lds {
-    background-image: url("images/cat.jpeg");
-    height: 550px;
-    background-blend-mode: hard-light;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-bottom: 10px;
-  }
-  .hobbies {
-    background-image: url("images/yoasobi.jpg");
-    height: 700px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-bottom: 100px;
-  }
-  .box {
-    background: rgb(174, 198, 207);
-    text-align: left;
-    margin-left: 55%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    margin-right: 0;
-    padding-right: 20%;
-  }
-  .corner {
-    font-size: 50px;
-    font-weight: bolder;
-    padding: 10px;
-    margin: 35% 50% 0 0;
-    mix-blend-mode: normal;
-  }
-  .fam {
-    background-image: url("images/kazoku.jpg");
-    height: 800px;
-    background-color: palevioletred;
-    background-blend-mode: screen;
-    background-attachment: fixed;
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-bottom: 50px;
-  }
-  img {
-    image-rendering: crisp-edges;
-  }
-  .famspeech {
-    font-size: 22px;
-    background: transparent;
-    text-align: justify;
-    color: white;
-    font-family: Futura;
-    padding: 20px;
-    display: block;
-  }
-  .dreams {
-    background-image: url("images/sky.jpg");
-    height: 500px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-bottom: 100px;
-  }
+  scroll-behavior: smooth;
+  margin: none;
+}
+.important {
+  text-align: center;
+}
+h1 {
+  padding: 10px;
+  font-family: Rockwell;
+  font-weight: lighter;
+  font-size: 100px;
+  display: block;
+  margin-bottom: 75px;
+}
+.right {
+  text-align: right;
+}
+
+h2 {
+  margin-top: 50px;
+  font-family: Spectral;
+  font-style: italic;
+}
+h3 {
+  font-family: Futura;
+  font-weight: lighter;
+  font-size: 45px;
+}
+p {
+  float: center;
+  text-align: center;
+  font-size: 20px;
+  font-family: Futura;
+  background: rgb(247, 201, 201);
+  mix-blend-mode: lighten;
+  padding: 20px;
+}
+body {
+  background: linear-gradient(
+    to bottom right,
+    rgb(247, 201, 201),
+    rgb(174, 198, 207)
+  );
+  background-repeat: no-repeat;
+  color: white;
+  margin: 0px;
+}
+.photo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.profile {
+  background-image: url("images/lolitsme.jpg");
+  height: 500px;
+  background-color: indigo;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 100px;
+}
+table {
+  display: block;
+  margin-top: 2%;
+  margin-left: 10%;
+  margin-right: 15%;
+  font-family: Futura;
+  font-size: 20px;
+  color: white;
+  background-color: rgb(247, 201, 201);
+  mix-blend-mode: lighten;
+  padding: 15px;
+  position: absolute;
+}
+th {
+  font-size: 36px;
+}
+ul {
+  list-style-type: square;
+}
+.lds {
+  background-image: url("images/cat.jpeg");
+  height: 550px;
+  background-blend-mode: hard-light;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 10px;
+}
+.hobbies {
+  background-image: url("images/yoasobi.jpg");
+  height: 700px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 100px;
+}
+.box {
+  background: rgb(174, 198, 207);
+  text-align: left;
+  margin-left: 55%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin-right: 0;
+  padding-right: 20%;
+}
+.corner {
+  font-size: 50px;
+  font-weight: bolder;
+  padding: 10px;
+  margin: 35% 50% 0 0;
+  mix-blend-mode: normal;
+}
+.fam {
+  background-image: url("images/kazoku.jpg");
+  height: 800px;
+  background-color: palevioletred;
+  background-blend-mode: screen;
+  background-attachment: fixed;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 50px;
+}
+img {
+  image-rendering: crisp-edges;
+}
+.famspeech {
+  font-size: 22px;
+  background: transparent;
+  text-align: justify;
+  color: white;
+  font-family: Futura;
+  padding: 20px;
+  display: block;
+}
+.dreams {
+  background-image: url("images/sky.jpg");
+  height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 100px;
+}
