--- a/style.css
+++ b/style.css
@@ -148,3 +148,11 @@ img {
   background-size: cover;
   margin-bottom: 100px;
 }
+.purple {
+  mix-blend-mode: normal;
+  background-color: lavender;
+  padding: 5px;
+  margin-top: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
