--- a/style.css
+++ b/style.css
@@ -149,10 +149,9 @@ img {
   margin-bottom: 100px;
 }
 .purple {
-  mix-blend-mode: normal;
+  float: left;
+  margin-top: none;
+  mix-blend-mode: soft-light;
   background-color: lavender;
-  padding: 5px;
-  margin-top: 0;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 20px 30px 20px 20px;
 }
