--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
   font-weight: lighter;
   font-size: 100px;
   display: block;
-  margin-bottom: 75px;
+  margin-bottom: 50px;
 }
 .right {
   text-align: right;
@@ -151,7 +151,14 @@ img {
 .purple {
   float: left;
   margin-top: none;
-  mix-blend-mode: soft-light;
   background-color: lavender;
-  padding: 20px 30px 20px 20px;
+  padding: 20px 45px 20px 20px;
 }
+.blue {
+  float: right;
+  margin-top: 10%;
+  margin-right: 50%;
+  background-color: lightcyan;
+  padding: 20px;
+}
+
