--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ img {
 }
 .dreams {
   background-image: url("images/sky.jpg");
-  height: 500px;
+  height: 800px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -153,18 +153,17 @@ img {
   margin-top: none;
   background-color: lavender;
   padding: 20px 45px 20px 20px;
-  display: block;
 }
 .blue {
+  float: right;
+  margin-top: 5px;
   margin-right: 50%;
   background-color: lightcyan;
   padding: 20px;
-  display: inline;
 }
 .pink {
   float: left;
-  margin-top: none;
-  background-color: lavender;
+  margin-top: 50px;
+  background-color: plum;
   padding: 20px 45px 20px 20px;
-  display: block;
 }
