--- a/style.css
+++ b/style.css
@@ -156,14 +156,14 @@ img {
 }
 .blue {
   float: right;
-  margin-top: 5px;
-  margin-right: 50%;
+  margin-left: 40%;
   background-color: lightcyan;
-  padding: 20px;
+  padding: 20px 20px 20px 45px;
 }
 .pink {
-  float: left;
-  margin-top: 50px;
+  float: right;
+  margin-top: 35px;
   background-color: plum;
-  padding: 20px 45px 20px 20px;
+  mix-blend-mode: lighten;
+  padding: 20px 20px 20px 45px;
 }
