Added text box next to photos under hopes & dreams

--- a/style.css
+++ b/style.css
@@ -130,9 +130,8 @@ ul {
 img {
   image-rendering: crisp-edges;
 }
-.famspeech {
+.speech {
   font-size: 22px;
-  background: transparent;
   text-align: justify;
   color: white;
   font-family: Futura;
