--- a/style.css
+++ b/style.css
@@ -162,6 +162,6 @@ img {
 .pink {
   float: right;
   margin-top: 35px;
-  background-color: plum;
+  background-color: thistle;
   padding: 20px 20px 20px 45px;
 }
