Removed float right property and inserted inline block display for blue selector

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ img {
   padding: 20px 45px 20px 20px;
 }
 .blue {
-  float: right;
+  display: inline-block;
   background-color: lightcyan;
   padding: 20px 20px 20px 45px;
 }
