--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ img {
   padding: 20px 45px 20px 20px;
 }
 .blue {
-  display: inline-block;
+  display: block;
   background-color: lightcyan;
   padding: 20px 20px 20px 45px;
 }
