Text box: decreased font size, added padding and float property

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ img {
   padding: 20px 45px 20px 20px;
 }
 .blue {
-  display: block;
+  float: right;
   background-color: lightcyan;
   padding: 20px 20px 20px 45px;
 }
