--- a/style.css
+++ b/style.css
@@ -147,6 +147,11 @@ img {
   background-size: cover;
   margin-bottom: 100px;
 }
+.hopes {
+  font-size: 20px;
+  padding: 15px 15px 20px 15px;
+  text-align: justify;
+}
 .purple {
   float: left;
   margin-top: none;
@@ -154,11 +159,12 @@ img {
   padding: 20px 45px 20px 20px;
 }
 .blue {
-  float: right;
+  vertical-align: right;
   background-color: lightcyan;
   padding: 20px 20px 20px 45px;
 }
 .pink {
+  vertical-align: right;
   float: right;
   margin-top: 35px;
   background-color: thistle;
