--- a/style.css
+++ b/style.css
@@ -5,9 +5,13 @@ html {
 .important {
   text-align: center;
 }
-
 header {
   min-height: 100vh;
+  margin-top: 20px;
+  margin-bottom: 100px;
+}
+.midhead {
+  transform: translateY(15vh);
 }
 hr {
   margin-bottom: 50px;
@@ -60,16 +64,18 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-/* Profile section */
-.profile {
-  background-image: url("images/lolitsme.jpg");
+.parallax {
   height: 100vh;
-  background-color: indigo;
-  background-blend-mode: lighten;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+/* Profile section */
+.profile {
+  background-image: url("images/lolitsme.jpg");
+  background-color: indigo;
+  background-blend-mode: lighten;
   margin-bottom: 100px;
 }
 table {
@@ -94,22 +100,12 @@ ul {
 /* Likes & dislikes section */
 .lds {
   background-image: url("images/cat.jpeg");
-  height: 100vh;
   background-blend-mode: hard-light;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   margin-bottom: 10px;
 }
 /* Hobbies section*/
 .hobbies {
   background-image: url("images/yoasobi.jpg");
-  height: 100vh;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   margin-bottom: 100px;
 }
 .box {
@@ -134,10 +130,6 @@ ul {
   height: 800px;
   background-color: palevioletred;
   background-blend-mode: screen;
-  background-attachment: fixed;
-  background-position: top;
-  background-repeat: no-repeat;
-  background-size: cover;
   margin-bottom: 50px;
 }
 .speech {
@@ -152,18 +144,15 @@ ul {
 .dreams {
   background-image: url("images/sky.jpg");
   height: 150vh;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   margin-bottom: 100px;
 }
 .hopes {
+  transform: translateX(30px);
   font-family: Futura;
   font-size: 20px;
   padding: 15px 15px 20px 15px;
   text-align: justify;
-  width: 650;
+  width: 50%;
 }
 .purple {
   float: left;
@@ -177,6 +166,8 @@ ul {
   float: right;
   background-color: lightcyan;
   padding: 20px 20px 20px 45px;
+  margin-left: 10%;
+  margin-bottom: 10%;
 }
 .pink {
   vertical-align: right;
