--- a/style.css
+++ b/style.css
@@ -2,6 +2,37 @@ html {
   scroll-behavior: smooth;
   margin: none;
 }
+.loader {
+  width: 80px;
+  height: 80px;
+  border: 2px solid rgb(174, 198, 207);
+  border-top: 3px solid rgb(247, 201, 201);
+  border-radius: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  animation: spin 1s infinite linear;
+}
+@keyframes spin {
+  from{
+    transform: rotate(0deg);
+  }
+  to{
+    transform: rotate(360deg); 
+  }
+}
+#overlay {
+  height: 100%;
+  width: 100%;
+  background: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+}
 .important {
   text-align: center;
 }
