--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ h2 {
   font-style: italic;
 }
 h3 {
-  font-family: Futura;
   font-weight: bolder;
   font-size: 35px;
   padding: 10px;
@@ -74,10 +73,12 @@ h3 {
 p {
   text-align: center;
   font-size: 20px;
-  font-family: Futura;
   background: rgb(247, 201, 201);
   mix-blend-mode: lighten;
   padding: 20px;
+}
+.smallText {
+  font-family: Futura;
 }
 body {
   background: linear-gradient(
@@ -114,7 +115,6 @@ table {
   margin-top: 2%;
   margin-left: 10%;
   margin-right: 15%;
-  font-family: Futura;
   font-size: 20px;
   color: white;
   background-color: rgb(247, 201, 201);
@@ -167,7 +167,6 @@ ul {
   font-size: 22px;
   text-align: justify;
   color: white;
-  font-family: Futura;
   padding: 40px;
   display: block;
 }
@@ -179,7 +178,6 @@ ul {
 }
 .hopes {
   transform: translateX(30px);
-  font-family: Futura;
   font-size: 20px;
   padding: 15px 15px 20px 15px;
   text-align: justify;
@@ -212,7 +210,6 @@ ul {
 .back {
   font-size: 60px;
   margin: 70px 50px 50px 50px;
-  font-family: Futura;
 }
 a {
   color: white;
