--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ hr {
 }
 h1 {
   padding: 10px;
-  font-family: Rockwell;
+  font-family: Kameron;
   font-weight: lighter;
   font-size: 100px;
   display: block;
@@ -64,6 +64,7 @@ h2 {
   margin-top: 50px;
   font-family: Spectral;
   font-style: italic;
+  font-weight: lighter;
 }
 h3 {
   font-weight: bolder;
@@ -78,7 +79,8 @@ p {
   padding: 20px;
 }
 .smallText {
-  font-family: Futura;
+  font-family: Nunito;
+  font-weight: bolder;
 }
 body {
   background: linear-gradient(
