--- a/style.css
+++ b/style.css
@@ -40,9 +40,18 @@ header {
   min-height: 100vh;
   margin-top: 45px;
   margin-bottom: 200px;
+  animation: fade-in 3s ease-in;
 }
 .midhead {
   transform: translateY(25vh);
+}
+@keyframes fade-in{
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 hr {
   margin-bottom: 50px;
@@ -98,7 +107,7 @@ body {
   margin-right: auto;
 }
 .parallax {
-  height: 100vh;
+  height: 150vh;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -174,7 +183,6 @@ ul {
 /* Hopes & dreams section */
 .dreams {
   background-image: url("images/sky.jpg");
-  height: 150vh;
   margin-bottom: 100px;
 }
 .hopes {
