--- a/style.css
+++ b/style.css
@@ -1,38 +1,7 @@
 html {
   scroll-behavior: smooth;
-  margin: none;
 }
-.loader {
-  width: 80px;
-  height: 80px;
-  border: 2px solid rgb(174, 198, 207);
-  border-top: 3px solid rgb(247, 201, 201);
-  border-radius: 100%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  animation: spin 1s infinite linear;
-}
-@keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-#overlay {
-  height: 100vh;
-  width: 100%;
-  background: white;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 999;
-}
+
 .important {
   text-align: center;
 }
@@ -40,10 +9,9 @@ header {
   min-height: 100vh;
   margin-top: 45px;
   margin-bottom: 200px;
-  animation: fade-in 3s ease-in;
 }
 .midhead {
-  transform: translateY(25vh);
+  margin: auto;
 }
 @keyframes fade-in{
   from {
@@ -100,6 +68,7 @@ body {
   color: white;
   margin: 0px;
   overflow-x: hidden;
+  animation: fade-in 3s ease-in;
 }
 .photo {
   display: block;
@@ -239,6 +208,7 @@ ul {
 a {
   color: white;
   text-decoration: none;
+  display: block;
 }
 .credits {
   font-size: 18px;
