--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
 html {
   scroll-behavior: smooth;
 }
-
+body {
+  background: linear-gradient(
+    to bottom right,
+    rgb(247, 201, 201),
+    rgb(174, 198, 207)
+  );
+  background-repeat: no-repeat;
+  color: white;
+  margin: 0px;
+  overflow-x: hidden;
+  animation: fade-in 3s ease-in;
+}
 .important {
   text-align: center;
 }
@@ -50,25 +61,15 @@ h3 {
 p {
   text-align: center;
   font-size: 20px;
+  text-shadow: 2px 2px 3px rgb(174, 198, 207);
   background: rgb(247, 201, 201);
-  mix-blend-mode: lighten;
+  width: 50%;
+  margin-top: 15%;
   padding: 20px;
 }
 .smallText {
   font-family: Nunito;
   font-weight: bolder;
-}
-body {
-  background: linear-gradient(
-    to bottom right,
-    rgb(247, 201, 201),
-    rgb(174, 198, 207)
-  );
-  background-repeat: no-repeat;
-  color: white;
-  margin: 0px;
-  overflow-x: hidden;
-  animation: fade-in 3s ease-in;
 }
 .photo {
   display: block;
@@ -89,24 +90,7 @@ body {
   background-blend-mode: lighten;
   margin-bottom: 100px;
 }
-table {
-  display: block;
-  margin-top: 2%;
-  margin-left: 10%;
-  margin-right: 15%;
-  font-size: 20px;
-  color: white;
-  background-color: rgb(247, 201, 201);
-  mix-blend-mode: lighten;
-  padding: 15px;
-  position: absolute;
-}
-th {
-  font-size: 36px;
-}
-ul {
-  list-style-type: square;
-}
+
 /* Likes & dislikes section */
 .lds {
   background-image: url("images/cat.jpeg");
@@ -115,6 +99,23 @@ ul {
   margin-bottom: 10px;
   background-size: 80vh;
   background-position: right;
+}
+table {
+  display: block;
+  margin-top: 2%;
+  margin-left: 10%;
+  margin-right: 15%;
+  font-size: 20px;
+  color: white;
+  background-color: rgb(247, 201, 201);
+  padding: 15px;
+  position: absolute;
+}
+th {
+  font-size: 36px;
+}
+ul {
+  list-style-type: square;
 }
 /* Hobbies section*/
 .hobbies {
@@ -132,7 +133,7 @@ ul {
   margin-top: 5%;
   margin-bottom: 5%;
   margin-right: 0;
-  padding-right: 20%;
+  padding-right: 10%;
 }
 .corner {
   font-size: 50px;
@@ -155,8 +156,7 @@ ul {
   font-size: 45px;
   padding-left: 50px;
   margin-top: 0;
-  transform: translate(100%, 25vh);
-  background-color: thistle;
+  transform: translate(75%, 25vh);
 }
 .speech {
   font-size: 22px;
