--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 html {
   scroll-behavior: smooth;
+  margin: none;
 }
 body {
+  margin: auto;
   background: linear-gradient(
     to bottom right,
     rgb(247, 201, 201),
@@ -36,17 +38,17 @@ hr {
   margin-bottom: 50px;
 }
 h1 {
-  padding: 10px;
+  padding-left: 70px;
+  padding-right: 70px;
   font-family: Kameron;
   font-size: 100px;
   display: block;
-  margin-top: 25px;
+  margin-top: 15px;
   margin-bottom: 50px;
 }
 .right {
   text-align: right;
 }
-
 h2 {
   margin-top: 50px;
   font-family: Spectral;
@@ -64,7 +66,7 @@ p {
   text-shadow: 2px 2px 3px rgb(174, 198, 207);
   background: rgb(247, 201, 201);
   width: 50%;
-  padding: 20px;
+  padding: 20px 30px 20px 20px;
 }
 .smallText {
   font-family: Nunito;
@@ -76,7 +78,7 @@ p {
   margin-right: auto;
 }
 .parallax {
-  height: 150vh;
+  height: 100vh;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -120,11 +122,9 @@ ul {
 /* Hobbies section*/
 .hobbies {
   background-image: url("images/yoasobi.jpg");
-  margin-bottom: 100px;
   background-color: lightseagreen;
   background-size: 100vh;
   background-position: top;
-  margin-bottom: 250px;
 }
 .box {
   background: rgb(174, 198, 207);
@@ -139,9 +139,8 @@ ul {
   font-size: 50px;
   font-weight: bolder;
   padding: 10px;
-  margin: 50% 50% 0 0;
   mix-blend-mode: normal;
-  transform: translateY(35%);
+  margin-top: 25%;
 }
 /* Family section */
 .fam {
@@ -200,15 +199,14 @@ ul {
   background-color: thistle;
   padding: 20px 20px 20px 45px;
 }
-/* End section */
-.back {
+/* Footer section */
+footer {
+  display: block;
   font-size: 60px;
-  margin: 70px 50px 50px 50px;
 }
 a {
   color: white;
   text-decoration: none;
-  display: block;
 }
 .credits {
   font-size: 18px;
