--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ ul {
 .dreams {
   background-image: url("images/sky.jpg");
   margin-bottom: 100px;
+  height: 1000px;
 }
 .hopes {
   transform: translateX(30px);
@@ -176,31 +177,31 @@ ul {
   width: 50%;
 }
 .purple {
-  margin-top: none;
   background-color: rgb(178,163,184);
-  padding: 20px;
+  padding: 20px 20px 20px 45px;
+  float: left;
 }
 .blue {
   vertical-align: right;
   float: right;
   background-color: rgb(174, 198, 207);
-  padding: 20px 20px 20px 45px;
+  padding: 20px 45px 20px 20px;
   margin-left: 10%;
   margin-bottom: 10%;
 }
 .pink {
   float: right;
-  margin-right: 10px;
-  margin-top: 80px;
+  margin-top: 16px;
   background-color: rgb(247, 201, 201);
-  padding: 20px 20px 20px 45px;
+  padding: 20px 45px 20px 20px;
 }
 /* Footer section */
 footer {
-  display: block;
   font-size: 60px;
+  margin-bottom: 25px;
 }
 a {
+  display: block;
   color: white;
   text-decoration: none;
 }
