--- a/style.css
+++ b/style.css
@@ -192,13 +192,14 @@ ul {
 }
 .pink {
   float: right;
-  margin-top: 16px;
+  margin-left: 50%;
   background-color: rgb(247, 201, 201);
   padding: 20px 45px 20px 20px;
 }
 /* Footer section */
 footer {
   font-size: 60px;
+  margin-top: 100px;
   margin-bottom: 25px;
 }
 a {
