--- a/animations.css
+++ b/animations.css
@@ -6,7 +6,14 @@
     transform: rotate(360deg);
   }
 }
-
+@keyframes load-fadein{
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
 @keyframes fade-in {
   from {
     opacity: 0;
