Added code to js file for preloader animation

--- a/style.css
+++ b/style.css
@@ -19,6 +19,14 @@ body {
   animation: fade-in 3s ease-in;
   animation: gradient 8s ease infinite;
 }
+#overlay{
+  height:100%;
+  width:100%;
+  background:rgb(178, 163, 184, .8);
+  position:fixed;
+  left:0;
+  top:0;
+ }
 .spinner {
   width: 80px;
   height: 80px;
@@ -37,15 +45,6 @@ body {
 
   animation: spin 1s infinite linear;
 }
-#overlay{
-  height:100%;
-  width:100%;
-  background:rgba(178, 163, 184, 1);
-  position:fixed;
-  left:0;
-  top:0;
-  animation: load-fadein 2s ease-out;
- }
 hr {
   margin-bottom: 50px;
 }
