--- a/style.css
+++ b/style.css
@@ -16,18 +16,21 @@ body {
   text-shadow: 2px 2px 3px rgb(174, 198, 207);
   margin: 0px;
   overflow-x: hidden;
-  animation: fade-in 3s ease-in;
+  animation: fade-in 5s ease-in;
+  animation-delay: 3s;
   animation: gradient 8s ease infinite;
 }
 #overlay{
-  height:100%;
+  height:100vh;
   width:100%;
-  background:rgb(178, 163, 184, .8);
+  background:rgb(178, 163, 184, 1);
   position:fixed;
   left:0;
   top:0;
+  z-index: 999;
+  animation: load-fade 3s ease-out;
  }
-.spinner {
+.loader {
   width: 80px;
   height: 80px;
 
