--- a/style.css
+++ b/style.css
@@ -23,7 +23,12 @@ body {
 #overlay{
   height:100vh;
   width:100%;
-  background:rgb(178, 163, 184, 1);
+  background: linear-gradient(
+    -45deg,
+    rgb(247, 201, 201),
+    rgb(174, 198, 207),
+    rgb(178, 163, 184)
+  );
   position:fixed;
   left:0;
   top:0;
