--- a/text.css
+++ b/text.css
@@ -38,6 +38,38 @@ p {
   font-family: Nunito;
   font-weight: bolder;
 }
+/* Header section */
+#container:hover div.text{
+  position: inherit; 
+  left:80px;
+  top: 15px;
+  display: block;
+  z-index: -99;
+  opacity: 1;
+  -webkit-transition: all 0.5s linear;
+  -o-transition: all 0.5s linear;
+  -ms-transition: all 0.5s linear;
+  -moz-transition: all 0.5s linear;
+  transition: all 0.5s linear;
+
+}
+
+.text{
+  width: 300px;
+  z-index: -99;
+  opacity: 0;
+  position: inherit; 
+  left:0px;
+  right: 0px;
+  top: 15px;
+  font-weight: bold;
+  -webkit-transition: all 0.5s linear;
+  -o-transition: all 0.5s linear;
+  -ms-transition: all 0.5s linear;
+  -moz-transition: all 0.5s linear;
+  transition: all 0.5s linear;
+}
+/* Footer section */
 a {
   display: block;
   color: white;
