--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 html {
   scroll-behavior: smooth;
   margin: 0px;
-  width: 100%;
+  min-width: 500px;
 }
 body {
   background: linear-gradient(
@@ -66,10 +66,6 @@ header {
 .midhead {
   margin: auto;
   transform: scale(0.75, 0.75);
-}
-#container {
-  clear: both;
-  z-index: 99;
 }
 /* Likes & dislikes section*/
 table {
