--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 html {
   scroll-behavior: smooth;
   margin: 0px;
-  min-width: 500px;
+  min-width: 900px;
+  max-width: 1500px;
 }
 body {
   background: linear-gradient(
