--- a/style.css
+++ b/style.css
@@ -147,3 +147,7 @@ footer {
   margin-top: 100px;
   margin-bottom: 50px;
 }
+.footerhr {
+  filter: brightness(0) invert(1);
+  transform: scale(0.5, 0.5);
+}
